--- a/src/pages/GalleryPage.module.css
+++ b/src/pages/GalleryPage.module.css
@@ -38,7 +38,7 @@
 
 .galleryPhotoCredit {
   text-align: center;
-  color: #666;
+  color: #999;
   font-size: 12px;
   margin-top: 16px;
   margin-bottom: 32px;
